--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>flash cards project</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <header><a href="/logout">Logout</a> <a href="/signup">Signup</a> <a href="/home">Home</a></header>
   <body>
