--- a/views/home.mustache
+++ b/views/home.mustache
@@ -8,7 +8,10 @@ Home Page!
   Take a look at all of my decks!
 
 {{#data}}
-{{.}}<br>
+<br>
+<br>
+Deckname : {{deckName}}<br>
+How many Cards? : {{Cards.length}}<br>
 <a href="/deck/{{id}}">Check out my deck here</a><br><br>
 {{/data}}
 
