need to work on the quiz

--- a/views/deck.mustache
+++ b/views/deck.mustache
@@ -12,6 +12,7 @@ Make your questions/cards here!
 <br><br>
 
 {{#deck}}
+<a href="/test/{{deck.id}}">Test yourself!</a>
 {{deckName}}<br>
 {{#Cards}}
 {{question}}
