--- a/views/editdelete.mustache
+++ b/views/editdelete.mustache
@@ -1,5 +1,5 @@
 Edit or delete your card<br><br>
-<form class="" action="/{{deckId}}/edit/{{data.id}}" method="post">
+<form class="" action="/card/{{data.deckId}}/edit/{{data.id}}" method="post">
 <input type="text" name="question" value="" placeholder="Change the question">
 <input type="text" name="body" value="" placeholder="Change the answer">
 <button type="submit">Change my Flip Card!</button>
@@ -8,6 +8,6 @@ Edit or delete your card<br><br>
 <br>
 <br>
 
-<form class="" action="/{{deckId}}/delete/{{data.id}}" method="post">
+<form class="" action="/card/{{data.deckId}}/delete/{{data.id}}" method="post">
   <button type="submit">Get rid of this card</button>
 </form>
