--- a/views/home.mustache
+++ b/views/home.mustache
@@ -13,6 +13,7 @@ Home Page!
 Deckname : {{deckName}}<br>
 How many Cards? : {{Cards.length}}<br>
 <a href="/deck/{{id}}">Check out my deck here</a><br><br>
+<a href="/test/{{deckid}}/deck/{{id}}">Take the test on {{deckName}} here!</a><br><br>
 {{/data}}
 
 </div>
