--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,5 +1,19 @@
-<form class="" action="/" method="post">
+<h2>Login here!</h2>
+  <center>
+  <br>
+
+<form class="login" action="/" method="post">
   <input type="text" name="username" value="" placeholder="username"><br>
   <input type="text" name="password" value="" placeholder="password"><br>
   <button type="submit">Login</button><br><br>
 </form>
+<br>
+<br>
+<form class="signup" action="/signup" method="post">
+  <input type="text" name="username" value="" placeholder="username">
+  <input type="text" name="name" value="" placeholder="name">
+  <input type="text" name="password" value="" placeholder="password">
+  <input type="text" name="confirm" value="" placeholder="confirm password">
+  <button type="submit">Sign up for free!</button>
+</form>
+</center>
