--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -5,7 +5,7 @@
     <title>flash cards project</title>
     <link rel="stylesheet" href="/main.css">
   </head>
-  <header><a href="/logout">Logout</a> <a href="/signup">Signup</a> <a href="/home">Home</a></header>
+  <header> <a href="/home">Home</a>  <a href="/logout">Logout</a></header>
   <body>
     {{{yield}}}
   <footer></footer>
