--- a/public/main.css
+++ b/public/main.css
@@ -91,3 +91,28 @@ h2 {
   padding: 10px;
   width: 200px;
 }
+
+.test {
+  align-items: center;
+display: flex;
+flex-direction: column;
+font-size: 1em;
+justify-content: center;
+margin: 10px auto;
+width: 300px;
+}
+
+.cards {
+  border-style: black solid 1px;
+}
+
+.answer {
+  font-size: 2em;
+  display: none;
+}
+
+.question:hover .answer {
+  display:block;
+  font-size: 2em;
+
+}
